@@ -24,3 +24,12 @@
  */
 
 #include "clutterperl.h"
+
+MODULE = Clutter::CloneTexture	PACKAGE = Clutter::CloneTexture	PREFIX = clutter_clone_texture_
+
+ClutterActor_noinc *
+clutter_clone_texture_new (class, texture)
+	ClutterTexture *texture
+    C_ARGS:
+    	texture
+
