@@ -24,3 +24,12 @@
  */
 
 #include "clutterperl.h"
+
+MODULE = Clutter::VideoTexture	PACKAGE = Clutter::VideoTexture	PREFIX = clutter_video_texture_
+
+
+ClutterActor_noinc *
+clutter_video_texture_new (class)
+    C_ARGS:
+        /* void */
+
